--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -411,6 +411,10 @@ gEnableLLStats=1
 # Disable rx wakelock
 rx_wakelock_timeout=0
 
+# TheCrazyLex@PA set beacon missed count threshold to improve stability
+gRoamBmissFirstBcnt=25
+gRoamBmissFinalBcnt=35
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
