onclite: wifi: Sync wifi config with latest stock MIUI

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -404,9 +404,12 @@ gEnableMacAddrSpoof=1
 #Set RPS CPU mask
 rps_mask=0f
 
-# wifi ping test
-gEnableDynSplitScan=0
-gEnableLLStats=1
+# Disable SAE support in Driver
+sae_enabled=0
+
+gRoamBmissFirstBcnt=15
+
+gRoamBmissFinalBcnt=25
 
 # Disable rx wakelock
 rx_wakelock_timeout=0
